# infino-cli

./: Cargo.toml  README.md  RELEASING.md  dist-workspace.toml  package-lock.json
.github/workflows/: crate-publish.yml  publish-crates-io.yml  release.yml
skills/infino/: SKILL.md
skills/infino-data/: SKILL.md
skills/infino-data/references/: SCHEMA.md
skills/infino-search/: SKILL.md
skills/infino-search/references/: SEARCH.md
skills/infino/references/: WORKFLOWS.md
src/: data.rs  main.rs  output.rs  predicate.rs  schema.rs  search.rs  skills.rs
