# The infino CLI — binary `infino`, a thin shell over the `infino` crate.
[package]
name = "infino-cli"
version = "0.2.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
description = "Command-line interface for infino: SQL, full-text, and vector search over object storage."
repository = "https://github.com/infino-ai/infino-cli"
homepage = "https://github.com/infino-ai/infino-cli"
readme = "README.md"
keywords = ["cli", "search", "vector-search", "full-text", "rag"]
categories = ["command-line-utilities", "database"]
# Keep the published crate lean — release/CI files aren't needed to build it.
# (skills/ IS kept: the binary embeds it via include_str!.)
exclude = [".github/", "RELEASING.md", "dist-workspace.toml"]

# Crate `infino-cli`, binary `infino`.
[[bin]]
name = "infino"
path = "src/main.rs"

[dependencies]
infino = "0.1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Matches the engine's arrow major so the returned RecordBatch / SchemaRef
# types unify.
arrow = { version = "58", features = ["prettyprint", "json", "csv"] }
parquet = { version = "58", features = ["arrow"] }
# Matches the engine's datafusion so the `Expr` type unifies with update/delete.
datafusion = "53"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
